--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
     <script src="https://cdn.digital.arizona.edu/lib/arizona-bootstrap/main/js/arizona-bootstrap.bundle.min.js"></script>
 
     <script>
+      /*******
+       * UPDATE THIS WITH YOUR FLOW'S TRIGGER URL
+       *******/
       const myFlowURL = 'https://HTTP_POST_URL_OF_YOUR_FLOW'
 
       $('#myform').submit(function() {
